--- a/README.adoc
+++ b/README.adoc
@@ -10,7 +10,7 @@ image::docs/images/Ui.png[width="600"]
 endif::[]
 
 ifndef::env-github[]
-image::images/Ui.png[width="600"]
+image::docs/images/Ui.png[width="600"]
 endif::[]
 
 * ModBook is a module planning application. It has a GUI but most of the user interactions happen using a CLI (Command Line Interface).
